# finite-element-course

./: .gitattributes  .gitignore  pyproject.toml  setup.cfg  setup.py
doc/: Makefile
doc/source/: 1_quadrature.rst  2_finite_elements.rst  3_meshes.rst  4_function_spaces.rst  5_functions.rst  6_finite_element_problems.rst  (+31 more)
fe_utils/: __init__.py  finite_elements.py  function_spaces.py  mesh.py  quadrature.py  reference_elements.py  utils.py
scripts/: fe_doc_dependencies  fe_install_venv  fe_install_venv_win  fe_test_implementation  plot_function_space_nodes  plot_function_space_nodes.py  plot_interpolate_lagrange  plot_lagrange_basis_functions  plot_lagrange_basis_functions.py  plot_lagrange_points  plot_lagrange_points.py  plot_mesh  plot_mesh.py  plot_sin_function
test/: plot_function_space_nodes.py  plot_interpolate_lagrange.py  plot_lagrange_basis_functions.py  plot_lagrange_points.py  plot_mesh.py  plot_sin_function.py  solve_helmholtz.py  solve_poisson.py  test_01_integrate.py  test_02_lagrange_points.py  test_03_vandermonde_matrix.py  test_04_init_finite_element.py  test_05_tabulate.py  test_06_vandermonde_matrix_grad.py  test_08_entity_nodes.py  test_09_jacobian.py  test_11_helmholtz_convergence.py  test_12_poisson_convergence.py  test_13_mastery_convergence.py  test_entity_nodes.py  test_helmholtz_convergence.py  test_init_finite_element.py  test_integrate.py  test_integrate_function.py  test_jacobian.py  test_lagrange_points.py  test_poisson_convergence.py  test_tabulate.py  test_tabulate_grad.py  test_vandermonde_matrix.py  test_vandermonde_matrix_grad.py
(+30 files in other folders)
