[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finite-element-course"
version = "2024.0"
description="""Skeleton finite element implementation in support of MATH60022/MATH70022 at Imperial College London."""
license = "MIT"
authors = [
    { name = "David A. Ham", email = "David.Ham@imperial.ac.uk" },
    { name = "Colin J. Cotter", email = "Colin.Cotter@imperial.ac.uk" },
]
dependencies = [
    "ipython",
    "matplotlib",
    "numpy", 
    "scipy", 
    "pytest"
]

[project.urls]
Documentation = "https://finite-element.github.io"

[project.scripts]
plot_function_space_nodes = "fe_utils.scripts.plot_function_space_nodes:plot_function_space_nodes"
plot_mesh = "fe_utils.scripts.plot_mesh:plot_mesh"
plot_lagrange_basis_functions = "fe_utils.scripts.plot_lagrange_basis_functions:plot_lagrange_basis_functions"
plot_sin_function = "fe_utils.scripts.plot_sin_function:plot_sin_function"
plot_interpolate_lagrange = "fe_utils.scripts.plot_interpolate_lagrange:plot_interpolate_lagrange"
plot_lagrange_points = "fe_utils.scripts.plot_lagrange_points:plot_lagrange_points"

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-proof",
    "sphinx-autobuild",
    "sphinx-panels",
    "sphinxcontrib-youtube"
]

[tool.hatch.build.targets.wheel]
      packages = ["fe_utils"]